Supervised MultiAi Agent Code

--- a/multiAIAgent/simple.ipynb
+++ b/multiAIAgent/simple.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": null,
    "id": "0712d1dc",
    "metadata": {},
    "outputs": [],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": null,
    "id": "33027f93",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
     "    # Maximum number of steps to take in the graph\n",
     "    {\"recursion_limit\": 5},\n",
     "):\n",
-    "    for node_name, state in s.items():\n",
+    "    for state in s.items():\n",
     "        if \"messages\" in state:\n",
     "            \n",
     "            state['messages'][-1].pretty_print()"
